--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
 anyio==3.6.1
+cachetools==5.3.0
+certifi==2022.12.7
+chardet==5.1.0
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.5
+cssselect==1.2.0
+cssutils==2.6.0
+emails==0.6
 fastapi==0.81.0
 h11==0.13.0
 idna==3.3
+lxml==4.9.2
+premailer==3.10.0
 pydantic==1.9.2
+python-dateutil==2.8.2
+requests==2.28.2
+secure-smtplib==0.1.1
+six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
 typing_extensions==4.3.0
+urllib3==1.26.15
 uvicorn==0.18.3
