--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,16 @@ fastapi==0.81.0
 h11==0.13.0
 idna==3.3
 lxml==4.9.2
+Pillow==9.5.0
 premailer==3.10.0
 pydantic==1.9.2
 python-dateutil==2.8.2
+reportlab==3.6.12
 requests==2.28.2
 secure-smtplib==0.1.1
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
-typing_extensions==4.3.0
+typing-extensions==4.3.0
 urllib3==1.26.15
 uvicorn==0.18.3
