--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,4 +3,4 @@ nixPkgs = ['python38', 'gcc']
 
 [start]
 onlyIncludeFiles = ['./']
-cmd = "cd ./helpers/ & ls"
+cmd = "uvicorn app:app --host 0.0.0.0 --reload"
