--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,26 @@ chardet==5.1.0
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.5
+contourpy==1.0.7
 cssselect==1.2.0
 cssutils==2.6.0
+cycler==0.11.0
 emails==0.6
 fastapi==0.81.0
+fonttools==4.39.3
 h11==0.13.0
 idna==3.3
+kiwisolver==1.4.4
 lxml==4.9.2
-notigram==2.1.0
+matplotlib==3.7.1
+numpy==1.24.3
+packaging==23.1
+Pillow==9.5.0
 premailer==3.10.0
 pydantic==1.9.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
+reportlab==3.6.12
 requests==2.28.2
 secure-smtplib==0.1.1
 six==1.16.0
