--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ contourpy==1.0.7
 cssselect==1.2.0
 cssutils==2.6.0
 cycler==0.11.0
+dnspython==2.3.0
 emails==0.6
 fastapi==0.81.0
 fonttools==4.39.3
 h11==0.13.0
 idna==3.3
+importlib-resources==5.12.0
 kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.7.1
@@ -23,6 +25,7 @@ packaging==23.1
 Pillow==9.5.0
 premailer==3.10.0
 pydantic==1.9.2
+pymongo==4.3.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 reportlab==3.6.12
@@ -31,6 +34,7 @@ secure-smtplib==0.1.1
 six==1.16.0
 sniffio==1.2.0
 starlette==0.19.1
-typing_extensions==4.3.0
+typing-extensions==4.3.0
 urllib3==1.26.15
 uvicorn==0.18.3
+zipp==3.15.0
